<resources>
    <string name="app_name">SellApp</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="id2">Id:</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="add_task">Add Task</string>
    <string name="date_created">Date created:</string>
    <string name="task_text">Text:</string>
    <string name="date_limit">Date limit:</string>
    <string name="button_set">Set</string>
    <string name="time_limit">Time limit:</string>
    <string name="button_save">Save</string>
    <string name="text_favorites">Favorites</string>
    <string name="text_schedules">Schedules</string>
    <string name="text_tasks">Tasks</string>
    <string name="title_activity_nd">NDActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_splash_screen">SellApp</string>

    <string name="home">Home</string>
    <string name="search">search</string>
    <string name="add_product">Add Product</string>
    <string name="wish_list">Wish List</string>
    <string name="profile">Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Search">Search</string>
    <string name="placeholder_home">Placeholder de la info Home</string>
    <string name="placeholder_profile">Placeholder de la info Profile</string>
    <string name="placeholder_search">Placeholder de la info Search</string>
    <string name="placeholder_wishlist">Placeholder de la info WishList</string>
    <string name="placeholder_addproduct">Placeholder de la info AddProduct</string>

    <string name="register">Register</string>
    <string name="by_signing_up_i_agree_to_the_terms_of_service_and_privacy_policy">By signing up I agree to the terms of service and privacy policy</string>
    <string name="phone_number">Phone Number</string>
    <string name="name">Name</string>
    <string name="birthday">Birthday [dd/mm/yyyy]</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email">Email</string>
    <string name="sign_up">Sign Up</string>
    <string name="location">Location</string>
    <string name="addProduct">Add a new product</string>
    <string name="editProduct">Product Editor</string>
    <string name="textProductName">Product Name:</string>
    <string name="textProductDescription">Product description:</string>
    <string name="textAddProductTitle">Add a new product</string>
    <string name="TextProductName">Name:</string>
    <string name="TextProductDescription">Description:</string>
    <string name="textProductPrice">Price:</string>
    <string name="textProductLocation">Location:</string>
    <string name="inputProductName">Put the name of the product...</string>
    <string name="inputProductDescription">Add some description...</string>
    <string name="inputProductLocation">Add the location of the product...</string>
    <string name="inputProductPrice">Price</string>
    <string name="addProductButton">Add Product</string>
    <string name="editProductButton">Edit Product</string>
    <string name="delProductButton">Delete Product</string>
    <string name="inputProductCurrency">€</string>
    <string name="show_the_user_image">Show the User image</string>
    <string name="phone_txt">Phone</string>
    <string name="birthday_txt">Birthday</string>
    <string name="e_mail_txt">E-mail</string>
    <string name="tab_products">Products</string>
    <string name="tab_rates">Rates</string>
    <string name="tab_location">Location</string>
    <string name="search_hint">Search data</string>
    <string name="searchbutton">Search</string>
    <string name="productName">Name</string>
    <string name="textPrice">Price</string>
    <string name="textDelete">Delete Product</string>
    <string name="textDescription">Description</string>
    <string name="profile_information">Profile Information</string>
    <string name="dialog_delete_account">Delete Account?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="dialog_message_delete">Your account will be deleted forever</string>
    <string name="new_password">New password</string>
    <string name="dialog_logout_title">Logout?</string>
    <string name="dialog_logout_message">Do you really want to exit?</string>
    <string name="logout">Logout</string>
    <string name="textProductAddImage">Images</string>
    <string name="textProductAddImage2">Images:</string>
    <string name="add_images_of_the_product">Add images of the product</string>
    <string name="add_to_your_wishlist">Add to your Wishlist</string>
    <string name="delete_from_your_wishlist">Delete from your Wishlist</string>
    <string name="send_buy_request">Send a buy request</string>
    <string name="sold">Sold</string>
    <string name="confirm_buy_request">Confirm buy request</string>
    <string name="deny_buy_request">Deny buy request</string>
    <string name="requested">Requested</string>
    <string name="default_notification_channel_id">fcm_default_channel</string>
    <string name="default_notification_channel_name">Weather</string>
    <string name="textProductTag">Tag</string>
    <string name="inputProductTags">Tag</string>
    <string name="Separatetagsvia">Separate Tags via \",\"</string>
</resources>
