<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/productListFragment"
        android:background="#E3FD02"
        android:enabled="true"
        android:icon="@drawable/homeicon"
        android:title="@string/home"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/searchFragment"
        android:enabled="true"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/Search"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/addProductFragment"
        android:enabled="true"
        android:icon="@drawable/addicon"
        android:title="@string/add_product"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/wishListFragment"
        android:enabled="true"
        android:icon="@drawable/wishicon"
        android:title="@string/wish_list"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/profileFragment"
        android:enabled="true"
        android:icon="@drawable/profileicon"
        android:title="@string/profile"
        app:showAsAction="ifRoom" />
</menu>
