<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gadient_blue_black"
    tools:context=".fragment.AddProductFragment">

    <TextView
        android:id="@+id/textProductAddImage"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/textProductAddImage2"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/productImageBtn"
        app:layout_constraintStart_toStartOf="@+id/textProductName"
        app:layout_constraintTop_toTopOf="@+id/productImageBtn" />

    <EditText
        android:id="@+id/inputProductName"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="@font/montserrat"
        android:hint="@string/inputProductName"
        android:inputType="textPersonName"
        android:textColorHint="#BAFFFFFF"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toEndOf="@+id/textProductDescription"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <EditText
        android:id="@+id/inputProductDescription"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="@font/montserrat"
        android:gravity="start|top"
        android:hint="@string/inputProductDescription"
        android:inputType="textMultiLine"
        android:textColorHint="#BAFFFFFF"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/inputProductName"
        app:layout_constraintStart_toStartOf="@+id/inputProductName"
        app:layout_constraintTop_toBottomOf="@+id/inputProductName" />

    <EditText
        android:id="@+id/inputProductPrice"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="@font/montserrat"
        android:hint="@string/inputProductPrice"
        android:inputType="numberDecimal"
        android:textColor="#BAFFFFFF"
        android:textColorHint="#BAFFFFFF"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/inputProductDescription"
        app:layout_constraintStart_toStartOf="@+id/inputProductDescription"
        app:layout_constraintTop_toBottomOf="@+id/inputProductDescription" />

    <TextView
        android:id="@+id/textAddProductTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:shadowColor="#000000"
        android:shadowDx="-2"
        android:shadowDy="-2"
        android:shadowRadius="1"
        android:text="@string/textAddProductTitle"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:fontFamily="@font/montserrat" />

    <TextView
        android:id="@+id/textProductName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/TextProductName"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/inputProductName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/inputProductName" />

    <TextView
        android:id="@+id/textProductDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:text="@string/TextProductDescription"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/inputProductDescription"
        app:layout_constraintStart_toStartOf="@+id/textProductName"
        app:layout_constraintTop_toBottomOf="@+id/inputProductName" />

    <TextView
        android:id="@+id/textProductPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:text="@string/textProductPrice"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/inputProductPrice"
        app:layout_constraintStart_toStartOf="@+id/textProductName"
        app:layout_constraintTop_toTopOf="@+id/inputProductPrice" />

    <TextView
        android:id="@+id/textProductLocation"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/textProductLocation"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@+id/textProductPrice"
        app:layout_constraintTop_toBottomOf="@+id/inputProductPrice" />

    <Spinner
        android:id="@+id/inputLocation"
        android:layout_width="250dp"
        android:layout_height="24dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/textProductLocation"
        app:layout_constraintEnd_toEndOf="@+id/inputProductPrice"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/inputProductPrice"
        app:layout_constraintTop_toBottomOf="@+id/inputProductPrice"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textProductTag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:text="@string/textProductTag"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/inputProductTag"
        app:layout_constraintStart_toStartOf="@+id/textProductLocation"
        app:layout_constraintTop_toTopOf="@+id/inputProductTag" />


    <EditText
        android:id="@+id/inputProductTag"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="@font/montserrat"
        android:gravity="start|top"
        android:hint='@string/Separatetagsvia'
        android:inputType="textMultiLine"
        android:textColorHint="#BAFFFFFF"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/inputLocation"
        app:layout_constraintStart_toStartOf="@+id/inputLocation"
        app:layout_constraintTop_toBottomOf="@+id/inputLocation" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="90dp" />

    <Button
        android:id="@+id/editProductButton"
        android:text="@string/addProductButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBaseline_toBaselineOf="parent"
        android:layout_margin="10dp"
        style="@style/footerButton"/>

    <ImageButton
        android:id="@+id/productImageBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        android:contentDescription="@string/add_images_of_the_product"
        android:src="@drawable/ic_menu_camera"
        app:layout_constraintBottom_toTopOf="@+id/addProductButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.347"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputLocation"
        app:layout_constraintVertical_bias="0.05" />

    <ImageView
        android:id="@+id/imageViewProduct"
        android:layout_width="171dp"
        android:layout_height="104dp"
        android:contentDescription="@string/add_images_of_the_product"
        android:src="@drawable/wishicon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/inputLocation"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/productImageBtn"
        app:layout_constraintTop_toBottomOf="@+id/inputLocation"
        app:layout_constraintVertical_bias="0.292" />

</androidx.constraintlayout.widget.ConstraintLayout>
