<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gadient_blue_black">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="160dp"
        android:layout_height="200dp"
        app:layout_constraintBottom_toTopOf="@+id/login_username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.49"
        app:srcCompat="@mipmap/ic_launcher" />

    <EditText
        android:id="@+id/login_username"
        style="@style/Widget.MaterialComponents.TextInputEditText.OutlinedBox.Dense"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:autofillHints=""
        android:background="@android:drawable/editbox_background"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:fontFamily="@font/montserrat"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/login_button"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.61" />

    <EditText
        android:id="@+id/login_password"
        style="@style/Widget.MaterialComponents.TextInputEditText.OutlinedBox.Dense"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:autofillHints=""
        android:background="@android:drawable/editbox_background"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:fontFamily="@font/montserrat"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/login_username"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/login_username"
        app:layout_constraintTop_toBottomOf="@+id/login_username" />

    <Button
        android:id="@+id/login_button"
        style="@style/footerButton"
        android:layout_marginTop="25dp"
        android:text="@string/login"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_password" />

    <Button
        android:id="@+id/register_button"
        style="@style/footerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:background="@color/invisible"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="#877F7F"
        android:textSize="16dp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="@+id/login_button"
        app:layout_constraintTop_toTopOf="@+id/login_button" />

</androidx.constraintlayout.widget.ConstraintLayout>
